added google analytics and cookie banner

--- a/web-frontend/public/index.html
+++ b/web-frontend/public/index.html
@@ -31,6 +31,8 @@
       visibility: hidden;
     }
     </style>
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-XNJ2CHNG38"></script>
+      <script>window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-XNJ2CHNG38');</script>
   </head>
   <body>
     <div id="nightmode"></div>
