--- a/web-frontend/public/index.html
+++ b/web-frontend/public/index.html
@@ -37,7 +37,7 @@
   <body>
     <div id="nightmode"></div>
     <noscript>
-      <strong>We're sorry but stellarium-web doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>Rubber Ruck Debris Tracker require JavaScript to quack. Please enable it to continue.</strong>
     </noscript>
     <div id="app">
       <router-view></router-view>
